--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,26 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>sublight-patrol</title>
+		<title>Sublight Patrol</title>
 		<style>
-			html,
 			body {
-				padding: 0;
 				margin: 0;
-				height: 100%;
-			}
-
-			body {
-				display: grid;
-				justify-content: center;
-				align-content: center;
-				background-color: #404040;
-				color: #cccccc;
-				font-family: "Trebuchet MS", sans-serif;
+				padding: 0;
+				overflow: hidden;
 			}
 		</style>
 	</head>
-	<body>
-		<div class="soon">Soon.</div>
-	</body>
+	<body></body>
 </html>
