--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,10 +5,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sublight Patrol</title>
 		<style>
-			body {
+			body,
+			html {
 				margin: 0;
 				padding: 0;
-				overflow: hidden;
+				height: 100%;
+				/* overflow: hidden; */
+			}
+
+			body {
+				display: grid;
+				align-content: center;
+				justify-content: center;
+				background-color: #303030;
+			}
+
+			canvas {
+				border: 1px solid gray;
+				box-shadow: 0 0 10px #00000050;
 			}
 		</style>
 	</head>
