Dialog system - Able to trigger conversation from App.js, visuals done

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,7 +12,12 @@
 	<body class="body--transitions-enabled">
 		<div class="container">
 			<header><h1>sublight patrol</h1></header>
-			<main id="main"></main>
+			<main id="main">
+				<div class="main__dialog" id="main__dialog">
+					<div class="main__dialog-speaker" id="main__dialog-speaker"></div>
+					<div class="main__dialog-message" id="main__dialog-message"></div>
+				</div>
+			</main>
 			<footer id="footer">
 				<div class="controls">
 					<div class="controls__control">
