Window object preventDefaultOnKeys()

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -21,8 +21,8 @@
 			<footer id="footer">
 				<div class="controls">
 					<div class="controls__control">
-						<span class="controls__key">up, down, left, right</span
-						><span class="controls__function">Thruster control</span>
+						<span class="controls__key">up, dn, lt, rt</span
+						><span class="controls__function">Thrusters</span>
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">f</span
@@ -30,7 +30,9 @@
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">a</span
-						><span class="controls__function">Target closest entity</span>
+						><span class="controls__function"
+							>Target pointed / closest entity</span
+						>
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">s, d</span
@@ -38,7 +40,7 @@
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">g</span
-						><span class="controls__function">EMP blast</span>
+						><span class="controls__function">EMP</span>
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">space</span
@@ -46,7 +48,7 @@
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">esc</span
-						><span class="controls__function">Skip dialog</span>
+						><span class="controls__function">Pause game / Skip dialog</span>
 					</div>
 				</div>
 				<div class="footer__like">
