Alerts and warnings UI done, I'm able to trigger them from App.js

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -17,6 +17,9 @@
 					<div class="main__dialog-speaker" id="main__dialog-speaker"></div>
 					<div class="main__dialog-message" id="main__dialog-message"></div>
 				</div>
+				<div class="main__warnings" id="main__warnings">
+					<div class="main__warnings-proper" id="main__warnings-proper"></div>
+				</div>
 			</main>
 			<footer id="footer">
 				<div class="controls">
