--- a/src/index.template.html
+++ b/src/index.template.html
@@ -20,27 +20,25 @@
 				<div class="main__warnings" id="main__warnings">
 					<div class="main__warnings-proper" id="main__warnings-proper"></div>
 				</div>
-				<div class="main__messages" id=="main__messages">
-					<div class="main__messages-expand" id="main__messages-expand">
+				<div class="main__status main__status--hidden" id="main__status">
+					<div class="main__status-expand" id="main__status-expand">
 						<svg
-							class="main__messages-expand-chevron"
-							id="main__messages-expand-chevron"
+							class="main__status-expand-chevron"
+							id="main__status-expand-chevron"
 							width="16"
 							height="10"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
 						>
 							<path
-								class="main__messages-expand-chevron-path"
+								class="main__status-expand-chevron-path"
 								d="M1 9L8 2L15 9"
 								stroke="white"
 								stroke-width="1.5"
 							/>
 						</svg>
 					</div>
-					<div class="main__messages-proper" id="main__messages_proper">
-						<span class="yellow">Lorem ipsum dolor sit amet accentuer elit.</span>
-					</div>
+					<div class="main__status-proper" id="main__status-proper"></div>
 				</div>
 			</main>
 			<footer id="footer">
