Pause - fade out game, scroll status with the arrow keys

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -20,6 +20,9 @@
 				<div class="main__warnings" id="main__warnings">
 					<div class="main__warnings-proper" id="main__warnings-proper"></div>
 				</div>
+				<div class="main__pause" id="main__pause">
+					<div class="main__pause-text">[Paused]</div>
+				</div>
 				<div class="main__status main__status--hidden" id="main__status">
 					<div class="main__status-expand" id="main__status-expand">
 						<svg
