It is important to name things properly

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,36 +12,36 @@
 	<body class="body--transitions-enabled">
 		<div class="container">
 			<header><h1>sublight patrol</h1></header>
-			<main id="main">
-				<div class="main__dialog" id="main__dialog">
-					<div class="main__dialog-speaker" id="main__dialog-speaker"></div>
-					<div class="main__dialog-message" id="main__dialog-message"></div>
+			<main class="game" id="game">
+				<div class="game__dialog" id="game__dialog">
+					<div class="game__dialog-speaker" id="game__dialog-speaker"></div>
+					<div class="game__dialog-message" id="game__dialog-message"></div>
 				</div>
-				<div class="main__warnings" id="main__warnings">
-					<div class="main__warnings-proper" id="main__warnings-proper"></div>
+				<div class="game__warnings" id="game__warnings">
+					<div class="game__warnings-proper" id="game__warnings-proper"></div>
 				</div>
-				<div class="main__pause" id="main__pause">
-					<div class="main__pause-text">[Paused]</div>
+				<div class="game__pause" id="game__pause">
+					<div class="game__pause-text">[Paused]</div>
 				</div>
-				<div class="main__status main__status--hidden" id="main__status">
-					<div class="main__status-expand" id="main__status-expand">
+				<div class="game__status game__status--hidden" id="game__status">
+					<div class="game__status-expand" id="game__status-expand">
 						<svg
-							class="main__status-expand-chevron"
-							id="main__status-expand-chevron"
+							class="game__status-expand-chevron"
+							id="game__status-expand-chevron"
 							width="16"
 							height="10"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
 						>
 							<path
-								class="main__status-expand-chevron-path"
+								class="game__status-expand-chevron-path"
 								d="M1 9L8 2L15 9"
 								stroke="white"
 								stroke-width="1.5"
 							/>
 						</svg>
 					</div>
-					<div class="main__status-proper" id="main__status-proper"></div>
+					<div class="game__status-proper" id="game__status-proper"></div>
 				</div>
 			</main>
 			<footer id="footer">
