Scrollbar styles for Chrome and FF

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,7 +9,7 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body class="body--transitions-enabled">
+	<body class="body--transitions-enabled customScroll">
 		<div class="container">
 			<header><h1>sublight patrol</h1></header>
 			<main class="game" id="game">
@@ -41,7 +41,10 @@
 							/>
 						</svg>
 					</div>
-					<div class="game__status-proper" id="game__status-proper"></div>
+					<div
+						class="game__status-proper customScroll"
+						id="game__status-proper"
+					></div>
 				</div>
 			</main>
 			<footer id="footer">
