Status expander is more robust now, reworked footer

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -50,7 +50,7 @@
 			<footer id="footer">
 				<div class="controls">
 					<div class="controls__control">
-						<span class="controls__key">up, dn, lt, rt</span
+						<span class="controls__key">up, down, left, right</span
 						><span class="controls__function">Thrusters</span>
 					</div>
 					<div class="controls__control">
@@ -73,22 +73,50 @@
 					</div>
 					<div class="controls__control">
 						<span class="controls__key">space</span
-						><span class="controls__function">Fire / Advance dialog</span>
+						><span class="controls__function">Fire</span>
 					</div>
+					<br />
 					<div class="controls__control">
 						<span class="controls__key">esc</span
-						><span class="controls__function">Pause game / Skip dialog</span>
+						><span class="controls__function">Pause game</span>
+					</div>
+					<div class="controls__control">
+						<span class="controls__key">enter</span
+						><span class="controls__function">Advance dialog</span>
+					</div>
+					<div class="controls__control">
+						<span class="controls__key">shift + enter</span
+						><span class="controls__function">Skip dialog</span>
+					</div>
+					<div class="controls__control">
+						<span class="controls__key">ctrl + enter</span
+						><span class="controls__function">Skip cutscene</span>
 					</div>
 				</div>
-				<div class="footer__like">
+				<div class="footer__text">
 					Did you have fun with the game? If you feel like it, leave me a
-					<span class="footer__like-emoji">❤️</span>
+					<span class="footer__text-emoji">❤️</span>
 					<a
 						href="https://twitter.com/?"
 						target="_blank"
-						class="footer__like-link"
+						class="footer__text-link"
 						>on the tweet announcing it</a
 					>!
+					<span class="footer__text-separator"> | </span>
+					<a
+						href="https://github.com/iamgrid/sublight-patrol"
+						target="_blank"
+						class="footer__text-link"
+						>GitHub Repo</a
+					>
+					<span class="footer__text-separator"> | </span>
+					WebGL library:
+					<a
+						href="https://www.pixijs.com/"
+						target="_blank"
+						class="footer__text-link"
+						>PixiJS</a
+					>
 				</div>
 				<a class="footer__home" href="https://iamgrid.co.uk" alt="Home">
 					<svg
