mainReducer purity restored, calculateDistance fixed

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -195,7 +195,7 @@
 							>GitHub Repo</a
 						>
 						<span class="footer__text-separator"> | </span>
-						WebGL library:
+						WebGL rendering engine:
 						<a
 							href="https://www.pixijs.com/"
 							target="_blank"
