Webpack - image loading, HUD display

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -46,6 +46,105 @@
 						id="game__status-proper"
 					></div>
 				</div>
+				<div id="game__hud" class="game__hud">
+					<div class="game__hud-proper">
+						<div class="game__hud-left-edge"></div>
+						<div class="game__hud-player-desc">
+							<div
+								class="game__hud-player-desc-proper"
+								id="game__hud-player-desc-proper"
+							>
+								<div class="game__hud-id-text" id="game__hud-player-id">
+									F/R Alpha 3
+								</div>
+								<div
+									class="game__hud-contains-text"
+									id="game__hud-player-contains"
+								>
+									Fuselage
+								</div>
+							</div>
+						</div>
+						<div id="game__hud-meters" class="game__hud-meters">
+							<div id="game__hud-meters-proper" class="game__hud-meters-proper">
+								<div class="game__hud-meter" id="game__hud-meter-player-shld">
+									<div class="meter-text" id="game__hud-meter-player-shld-text">
+										100
+									</div>
+									<div
+										class="meter-bar"
+										id="game__hud-meter-player-shld-bar"
+									></div>
+								</div>
+								<div class="game__hud-meter" id="game__hud-meter-player-hull">
+									<div class="meter-text" id="game__hud-meter-player-hull-text">
+										100
+									</div>
+									<div
+										class="meter-bar"
+										id="game__hud-meter-player-hull-bar"
+									></div>
+								</div>
+								<div class="game__hud-meter" id="game__hud-meter-player-sys">
+									<div
+										class="meter-text meter-text--disabled"
+										id="game__hud-meter-player-sys-text"
+									>
+										100
+									</div>
+									<div
+										class="meter-bar"
+										id="game__hud-meter-player-sys-bar"
+									></div>
+								</div>
+								<div class="game__hud-meter" id="game__hud-meter-target-shld">
+									<div class="meter-text" id="game__hud-meter-target-shld-text">
+										100
+									</div>
+									<div
+										class="meter-bar"
+										id="game__hud-meter-target-shld-bar"
+									></div>
+								</div>
+								<div class="game__hud-meter" id="game__hud-meter-target-hull">
+									<div class="meter-text" id="game__hud-meter-target-hull-text">
+										100
+									</div>
+									<div
+										class="meter-bar"
+										id="game__hud-meter-target-hull-bar"
+									></div>
+								</div>
+								<div class="game__hud-meter" id="game__hud-meter-target-sys">
+									<div class="meter-text" id="game__hud-meter-target-sys-text">
+										100
+									</div>
+									<div
+										class="meter-bar"
+										id="game__hud-meter-target-sys-bar"
+									></div>
+								</div>
+							</div>
+						</div>
+						<div class="game__hud-target-desc">
+							<div
+								class="game__hud-target-desc-proper"
+								id="game__hud-target-desc-proper"
+							>
+								<div class="game__hud-id-text" id="game__hud-target-id">
+									CON SD000-025
+								</div>
+								<div
+									class="game__hud-contains-text"
+									id="game__hud-target-contains"
+								>
+									Unknown
+								</div>
+							</div>
+						</div>
+						<div class="game__hud-right-edge"></div>
+					</div>
+				</div>
 			</main>
 			<footer id="footer">
 				<div class="controls">
