--- a/src/index.template.html
+++ b/src/index.template.html
@@ -54,74 +54,73 @@
 								class="game__hud-player-desc-proper"
 								id="game__hud-player-desc-proper"
 							>
-								<div class="game__hud-id-text" id="game__hud-player-id">
-									F/R Alpha 3
-								</div>
+								<div class="game__hud-id-text" id="game__hud-player-id"></div>
 								<div
-									class="game__hud-contains-text"
-									id="game__hud-player-contains"
-								>
-									Fuselage
-								</div>
+									class="game__hud-contents-text"
+									id="game__hud-player-contents"
+								></div>
 							</div>
 						</div>
 						<div id="game__hud-meters" class="game__hud-meters">
 							<div id="game__hud-meters-proper" class="game__hud-meters-proper">
-								<div class="game__hud-meter" id="game__hud-meter-player-shld">
-									<div class="meter-text" id="game__hud-meter-player-shld-text">
-										100
-									</div>
+								<div class="game__hud-meter" id="game__hud-meter-player-shield">
+									<div
+										class="meter-text"
+										id="game__hud-meter-player-shield-text"
+									></div>
 									<div
 										class="meter-bar"
-										id="game__hud-meter-player-shld-bar"
+										id="game__hud-meter-player-shield-bar"
 									></div>
 								</div>
 								<div class="game__hud-meter" id="game__hud-meter-player-hull">
-									<div class="meter-text" id="game__hud-meter-player-hull-text">
-										100
-									</div>
+									<div
+										class="meter-text"
+										id="game__hud-meter-player-hull-text"
+									></div>
 									<div
 										class="meter-bar"
 										id="game__hud-meter-player-hull-bar"
 									></div>
 								</div>
-								<div class="game__hud-meter" id="game__hud-meter-player-sys">
+								<div class="game__hud-meter" id="game__hud-meter-player-system">
 									<div
 										class="meter-text meter-text--disabled"
-										id="game__hud-meter-player-sys-text"
-									>
-										100
-									</div>
+										id="game__hud-meter-player-system-text"
+									></div>
 									<div
 										class="meter-bar"
-										id="game__hud-meter-player-sys-bar"
+										id="game__hud-meter-player-system-bar"
 									></div>
 								</div>
-								<div class="game__hud-meter" id="game__hud-meter-target-shld">
-									<div class="meter-text" id="game__hud-meter-target-shld-text">
-										100
-									</div>
+								<div class="game__hud-meter" id="game__hud-meter-target-shield">
+									<div
+										class="meter-text"
+										id="game__hud-meter-target-shield-text"
+									></div>
 									<div
 										class="meter-bar"
-										id="game__hud-meter-target-shld-bar"
+										id="game__hud-meter-target-shield-bar"
 									></div>
 								</div>
 								<div class="game__hud-meter" id="game__hud-meter-target-hull">
-									<div class="meter-text" id="game__hud-meter-target-hull-text">
-										100
-									</div>
+									<div
+										class="meter-text"
+										id="game__hud-meter-target-hull-text"
+									></div>
 									<div
 										class="meter-bar"
 										id="game__hud-meter-target-hull-bar"
 									></div>
 								</div>
-								<div class="game__hud-meter" id="game__hud-meter-target-sys">
-									<div class="meter-text" id="game__hud-meter-target-sys-text">
-										100
-									</div>
+								<div class="game__hud-meter" id="game__hud-meter-target-system">
+									<div
+										class="meter-text"
+										id="game__hud-meter-target-system-text"
+									></div>
 									<div
 										class="meter-bar"
-										id="game__hud-meter-target-sys-bar"
+										id="game__hud-meter-target-system-bar"
 									></div>
 								</div>
 							</div>
@@ -131,15 +130,11 @@
 								class="game__hud-target-desc-proper"
 								id="game__hud-target-desc-proper"
 							>
-								<div class="game__hud-id-text" id="game__hud-target-id">
-									CON SD000-025
-								</div>
+								<div class="game__hud-id-text" id="game__hud-target-id"></div>
 								<div
-									class="game__hud-contains-text"
-									id="game__hud-target-contains"
-								>
-									Unknown
-								</div>
+									class="game__hud-contents-text"
+									id="game__hud-target-contents"
+								></div>
 							</div>
 						</div>
 						<div class="game__hud-right-edge"></div>
