Improved cannon cooldown/shot regen logic

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -20,21 +20,21 @@
 						><span class="controls__function">Thrusters</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">f</span
+						<span class="controls__key">r</span
 						><span class="controls__function">Flip 180°</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">a</span
+						<span class="controls__key">e</span
 						><span class="controls__function"
 							>Target pointed / closest entity</span
 						>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">s, d</span
+						<span class="controls__key">q, w</span
 						><span class="controls__function">Cycle targets</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">g</span
+						<span class="controls__key">t</span
 						><span class="controls__function">EMP</span>
 					</div>
 					<div class="controls__control">
