--- a/src/index.template.html
+++ b/src/index.template.html
@@ -30,7 +30,7 @@
 						>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">r</span
+						<span class="controls__key">f</span
 						><span class="controls__function">Flip 180°</span>
 					</div>
 					<div class="controls__control">
