Changed some keyboard bindings; Updated npm packages

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -20,7 +20,7 @@
 						><span class="controls__function">Thrusters</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">q, w</span
+						<span class="controls__key">a, s</span
 						><span class="controls__function">Cycle targets</span>
 					</div>
 					<div class="controls__control">
