'Clear target' key binding

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -30,6 +30,10 @@
 						>
 					</div>
 					<div class="controls__control">
+						<span class="controls__key">c</span
+						><span class="controls__function">Clear target</span>
+					</div>
+					<div class="controls__control">
 						<span class="controls__key">f</span
 						><span class="controls__function">Flip 180°</span>
 					</div>
