Volume control visuals

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -17,12 +17,14 @@
 					<button
 						id="header__volume_control_button"
 						class="header__volume_control_button"
+						alt="mute/unmute"
 					>
 						🔊
 					</button>
 					<input
 						id="header__volume_control_input"
-						class="volume_control_input"
+						class="header__volume_control_input"
+						alt="volume slider"
 						type="range"
 						step="0.01"
 						value="0.4"
