EMP-related gameplay part 1

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -59,7 +59,7 @@
 						><span class="controls__function">Flip 180°</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">t</span
+						<span class="controls__key">g</span
 						><span class="controls__function">EMP</span>
 					</div>
 					<div class="controls__control">
