EMP-related gameplay done

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -45,7 +45,7 @@
 						><span class="controls__function">Cycle targets</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">e</span
+						<span class="controls__key">d</span
 						><span class="controls__function"
 							>Target pointed / closest entity</span
 						>
@@ -59,7 +59,7 @@
 						><span class="controls__function">Flip 180°</span>
 					</div>
 					<div class="controls__control">
-						<span class="controls__key">g</span
+						<span class="controls__key">e</span
 						><span class="controls__function">EMP</span>
 					</div>
 					<div class="controls__control">
