keyboardLayouts.js - Keyboard-related functions are now separate and can easily be swapped out

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -35,55 +35,7 @@
 			</header>
 			<main class="game" id="game"></main>
 			<footer id="footer">
-				<div class="controls">
-					<div class="controls__control">
-						<span class="controls__key">up, down, left, right</span
-						><span class="controls__function">Thrusters</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">a, s</span
-						><span class="controls__function">Cycle targets</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">d</span
-						><span class="controls__function"
-							>Target pointed / closest entity</span
-						>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">c</span
-						><span class="controls__function">Clear target</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">f</span
-						><span class="controls__function">Flip 180°</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">e</span
-						><span class="controls__function">EMP</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">space</span
-						><span class="controls__function">Fire</span>
-					</div>
-					<br />
-					<div class="controls__control">
-						<span class="controls__key">esc</span
-						><span class="controls__function">Pause game</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">enter</span
-						><span class="controls__function">Advance dialog</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">shift + enter</span
-						><span class="controls__function">Skip dialog</span>
-					</div>
-					<div class="controls__control">
-						<span class="controls__key">ctrl + enter</span
-						><span class="controls__function">Skip cutscene</span>
-					</div>
-				</div>
+				<div id="controls" class="controls">- - -</div>
 				<div class="footer__bottom">
 					<a class="footer__home" href="https://iamgrid.co.uk" alt="Home">
 						<svg
