--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,7 +12,7 @@
 	<body class="body--transitions-enabled customScroll">
 		<div class="container">
 			<header class="header">
-				<h1 class="header__title">sublight patrol</h1>
+				<h1 class="header__title" id="header__title">sublight patrol</h1>
 				<div class="header__volume_control">
 					<button
 						id="header__volume_control_button"
