NumpadEnter key is now treated as enter; initialGameState is now deep copied instead of being used by reference; Logging legibility improvements; Mission 2 sanity check; story.js@newGame() now properly resets state

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -124,11 +124,8 @@
 						<span class="footer__text-separator"> | </span>
 						Did you have fun with the game? If you feel like it, leave me a
 						<span class="footer__text-emoji">❤️</span>
-						<a
-							href="https://twitter.com/?"
-							target="_blank"
-							class="footer__text-link"
-							>on the tweet announcing it</a
+						<a href="https://bsky.app" target="_blank" class="footer__text-link"
+							>on the BlueSky post !!! announcing it</a
 						>!
 						<span class="footer__text-separator"> | </span>
 						<a
