--- a/src/index.template.html
+++ b/src/index.template.html
@@ -153,10 +153,10 @@
 					</a>
 					<div class="footer__text">
 						<span class="footer__text-separator"> | </span>
-						Did you have fun with the game? If you feel like it, leave me a
+						Did you have fun with the game? Leave me a
 						<span class="footer__text-emoji">❤️</span>
 						<a href="https://bsky.app" target="_blank" class="footer__text-link"
-							>on the BlueSky post !!! announcing it</a
+							>on the BlueSky post announcing it</a
 						>!
 						<span class="footer__text-separator"> | </span>
 						<a
