Added three-stage footer collapser affordance

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -66,8 +66,8 @@
 			</header>
 			<main class="game" id="game"></main>
 			<footer id="footer">
-				<div id="controls" class="controls">- - -</div>
-				<div class="footer__bottom">
+				<div id="footer__controls" class="footer__controls">- - -</div>
+				<div class="footer__bottom" id="footer__bottom">
 					<a class="footer__home" href="https://iamgrid.co.uk" alt="Home">
 						<svg
 							version="1.1"
