Tiny intro change

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -166,7 +166,7 @@
 							>GitHub Repo</a
 						>
 						<span class="footer__text-separator"> | </span>
-						WebGL rendering engine:
+						WebGL renderer:
 						<a
 							href="https://www.pixijs.com/"
 							target="_blank"
