Page title update

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-		<title>Sublight Patrol</title>
+		<title>iamgrid &middot; Sublight Patrol</title>
 		<link
 			href="https://fonts.googleapis.com/css?family=Roboto:300,700&subset=latin-ext"
 			rel="stylesheet"
