--- a/src/index.template.html
+++ b/src/index.template.html
@@ -13,55 +13,102 @@
 		<div class="container">
 			<header class="header">
 				<h1 class="header__title" id="header__title">sublight patrol</h1>
-				<div class="header__volume_control" id="header__volume_control">
-					<button
-						id="header__volume_control_button"
-						class="header__volume_control_button"
-						alt="mute/unmute"
-					>
-						<div
-							id="header__volume_control_button__icon--unmuted"
-							class="header__volume_control_button__icon"
+				<div class="header__sound" id="header__sound">
+					<div class="header__music">
+						<button
+							class="header__music-button"
+							id="header__music-button"
+							title="Enable/disable music playback"
+							type="button"
 						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								height="24px"
-								viewBox="0 -960 960 960"
-								width="24px"
-								fill="#606060"
+							<div
+								class="header__music-button-icon"
+								id="header__music-button-icon--enabled"
 							>
-								<path
-									d="M560-131v-82q90-26 145-100t55-168q0-94-55-168T560-749v-82q124 28 202 125.5T840-481q0 127-78 224.5T560-131ZM120-360v-240h160l200-200v640L280-360H120Zm440 40v-322q47 22 73.5 66t26.5 96q0 51-26.5 94.5T560-320Z"
-								/>
-							</svg>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									height="24px"
+									viewBox="0 -960 960 960"
+									width="24px"
+									fill="#606060"
+								>
+									<path
+										d="M400-120q-66 0-113-47t-47-113q0-66 47-113t113-47q23 0 42.5 5.5T480-418v-422h240v160H560v400q0 66-47 113t-113 47Z"
+									/>
+								</svg>
+							</div>
+							<div
+								class="header__music-button-icon"
+								id="header__music-button-icon--disabled"
+							>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									height="24px"
+									viewBox="0 -960 960 960"
+									width="24px"
+									fill="#606060"
+								>
+									<path
+										d="M792-56 56-792l56-56 736 736-56 56ZM560-514l-80-80v-246h240v160H560v166ZM400-120q-66 0-113-47t-47-113q0-66 47-113t113-47q23 0 42.5 5.5T480-418v-62l80 80v120q0 66-47 113t-113 47Z"
+									/>
+								</svg>
+							</div>
+						</button>
+						<div class="header__music-playing">
+							<span>Playing:</span> Sublight Patrol Theme
 						</div>
-						<div
-							id="header__volume_control_button__icon--muted"
-							class="header__volume_control_button__icon"
+					</div>
+					<div class="header__volume_control" id="header__volume_control">
+						<button
+							id="header__volume_control_button"
+							class="header__volume_control_button"
+							title="Mute/unmute"
+							type="button"
 						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								height="24px"
-								viewBox="0 -960 960 960"
-								width="24px"
-								fill="#606060"
+							<div
+								id="header__volume_control_button__icon--unmuted"
+								class="header__volume_control_button__icon"
 							>
-								<path
-									d="m616-320-56-56 104-104-104-104 56-56 104 104 104-104 56 56-104 104 104 104-56 56-104-104-104 104Zm-496-40v-240h160l200-200v640L280-360H120Z"
-								/>
-							</svg>
-						</div>
-					</button>
-					<input
-						id="header__volume_control_input"
-						class="header__volume_control_input"
-						alt="volume slider"
-						type="range"
-						step="0.01"
-						value="0.4"
-						min="0"
-						max="1"
-					/>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									height="24px"
+									viewBox="0 -960 960 960"
+									width="24px"
+									fill="#606060"
+								>
+									<path
+										d="M560-131v-82q90-26 145-100t55-168q0-94-55-168T560-749v-82q124 28 202 125.5T840-481q0 127-78 224.5T560-131ZM120-360v-240h160l200-200v640L280-360H120Zm440 40v-322q47 22 73.5 66t26.5 96q0 51-26.5 94.5T560-320Z"
+									/>
+								</svg>
+							</div>
+							<div
+								id="header__volume_control_button__icon--muted"
+								class="header__volume_control_button__icon"
+							>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									height="24px"
+									viewBox="0 -960 960 960"
+									width="24px"
+									fill="#606060"
+								>
+									<path
+										d="m616-320-56-56 104-104-104-104 56-56 104 104 104-104 56 56-104 104 104 104-56 56-104-104-104 104Zm-496-40v-240h160l200-200v640L280-360H120Z"
+									/>
+								</svg>
+							</div>
+						</button>
+						<input
+							id="header__volume_control_input"
+							class="header__volume_control_input"
+							alt="volume slider"
+							type="range"
+							step="0.01"
+							value="0.4"
+							min="0"
+							max="1"
+						/>
+					</div>
 				</div>
 			</header>
 			<main class="game" id="game"></main>
