Progress on: Hall of Finishers form

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -203,6 +203,13 @@
 						>!
 						<span class="footer__text-separator"> | </span>
 						<a
+							href="/hall-of-finishers/"
+							class="hall-of-finishers-link"
+							target="_blank"
+							>Hall of Finishers</a
+						>
+						<span class="footer__text-separator"> | </span>
+						<a
 							href="https://github.com/iamgrid/sublight-patrol"
 							target="_blank"
 							class="footer__text-link"
