hall-of-finishers url fixed

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -203,7 +203,7 @@
 						>!
 						<span class="footer__text-separator"> | </span>
 						<a
-							href="/hall-of-finishers/"
+							href="/sublight-patrol/hall-of-finishers/"
 							class="hall-of-finishers-link"
 							target="_blank"
 							>Hall of Finishers</a
