--- a/src/index.template.html
+++ b/src/index.template.html
@@ -203,26 +203,63 @@
 						>!
 						<span class="footer__text-separator"> | </span>
 						<a
-							href="/sublight-patrol/hall-of-finishers/"
-							class="hall-of-finishers-link"
-							target="_blank"
-							>Hall of Finishers</a
-						>
-						<span class="footer__text-separator"> | </span>
-						<a
 							href="https://github.com/iamgrid/sublight-patrol"
 							target="_blank"
 							class="footer__text-link"
 							>GitHub Repo</a
 						>
 						<span class="footer__text-separator"> | </span>
-						WebGL renderer:
 						<a
-							href="https://www.pixijs.com/"
+							href="/sublight-patrol/hall-of-finishers/"
+							class="hall-of-finishers-link"
 							target="_blank"
-							class="footer__text-link"
-							>PixiJS</a
+							>Hall of Finishers</a
 						>
+						<span class="footer__text-separator"> | </span>
+						<div class="footer__soundtrack">
+							<div class="footer__soundtrack-title">Soundtrack:</div>
+							<a
+								href="https://www.youtube.com/playlist?list=PL_VfzYF-ytQlW5iF7spTYB6FHCv32SFvI"
+								target="_blank"
+								class="footer__icon-link footer__icon-link--youtube"
+								title="On YouTube"
+								><svg
+									width="20px"
+									height="16px"
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 333333 333333"
+									shape-rendering="geometricPrecision"
+									text-rendering="geometricPrecision"
+									image-rendering="optimizeQuality"
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+								>
+									<path
+										d="M329930 100020s-3254-22976-13269-33065c-12691-13269-26901-13354-33397-14124-46609-3396-116614-3396-116614-3396h-122s-69973 0-116608 3396c-6522 793-20712 848-33397 14124C6501 77044 3316 100020 3316 100020S-1 126982-1 154001v25265c0 26962 3315 53979 3315 53979s3254 22976 13207 33082c12685 13269 29356 12838 36798 14254 26685 2547 113354 3315 113354 3315s70065-124 116675-3457c6522-770 20706-848 33397-14124 10021-10089 13269-33090 13269-33090s3319-26962 3319-53979v-25263c-67-26962-3384-53979-3384-53979l-18 18-2-2zM132123 209917v-93681l90046 46997-90046 46684z"
+										fill="#ffa0a0"
+									/></svg
+							></a>
+							<a
+								href="https://soundcloud.com/i_am_grid/sets/sublight-patrol-soundtrack"
+								target="_blank"
+								class="footer__icon-link footer__icon-link--soundcloud"
+								title="On SoundCloud"
+								><svg
+									width="20px"
+									height="16px"
+									viewBox="0 0 50 23"
+									xmlns="http://www.w3.org/2000/svg"
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									stroke-linejoin="round"
+									stroke-miterlimit="2"
+								>
+									<path
+										d="M49.139 15.466a6.88 6.88 0 01-6.966 6.495H25.429a1.404 1.404 0 01-1.39-1.396V2.536a1.536 1.536 0 01.925-1.468S26.504 0 29.748 0a10.973 10.973 0 015.63 1.547 11.14 11.14 0 015.242 7.26 6.465 6.465 0 011.776-.242 6.703 6.703 0 016.744 6.901h-.001zm-27.19-11.79c.505 6.115.872 11.692 0 17.787a.544.544 0 01-1.081 0c-.813-6.043-.46-11.725 0-17.787a.542.542 0 01.83-.52c.176.11.274.313.25.52zM18.56 21.469a.569.569 0 01-1.127 0 67.976 67.976 0 010-15.695.57.57 0 011.134 0c.673 5.21.67 10.485-.007 15.695zM15.166 5.243c.55 5.603.8 10.623-.006 16.213a.545.545 0 01-1.088 0c-.78-5.518-.518-10.682 0-16.213.03-.28.266-.49.547-.49.28 0 .517.21.547.49zm-3.4 16.233a.559.559 0 01-1.108 0 57.407 57.407 0 010-14.654.563.563 0 111.127 0 53.55 53.55 0 01-.02 14.654zM8.37 10.486c.859 3.8.472 7.156-.032 11.029a.532.532 0 01-1.05 0c-.458-3.82-.838-7.255-.032-11.03a.558.558 0 011.114.001zm-3.388-.577c.787 3.893.53 7.189-.02 11.095-.065.577-1.054.583-1.107 0-.498-3.847-.734-7.242-.02-11.095a.578.578 0 011.147 0zm-3.42 1.887c.825 2.582.543 4.68-.033 7.327a.537.537 0 01-1.07 0c-.497-2.595-.7-4.738-.044-7.327a.575.575 0 011.146 0z"
+										fill="#ffb090"
+									/></svg
+							></a>
+						</div>
 					</div>
 				</div>
 			</footer>
