Bluesky post is now live

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -198,7 +198,10 @@
 						<span class="footer__text-separator"> | </span>
 						Did you have fun with the game? Leave me a
 						<span class="footer__text-emoji">❤️</span>
-						<a href="https://bsky.app" target="_blank" class="footer__text-link"
+						<a
+							href="https://bsky.app/profile/iamgrid.co.uk/post/3lyrxf5sv322j"
+							target="_blank"
+							class="footer__text-link"
 							>on the BlueSky post announcing it</a
 						>!
 						<span class="footer__text-separator"> | </span>
